gatekeeper/templates/no-host-network.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: nohostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: NoHostNetwork
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package nohostnetwork
      violation[{"msg": msg}] {
        input.review.object.spec.hostNetwork == true
        msg := "C?m dùng hostNetwork: true"
      }
